# web-scraping-houses

./: README.md  data.json  new_main.py  proxy_list.txt  pyproject.toml  scraping.py
