[tool.poetry]
name = "web-scraping-houses"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "web_scraping_houses"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"
selenium = "^4.8.3"
scrapy-rotating-proxies = "^0.6.2"
antigate = "^1.4.0"
scrapy = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
